<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        >
        <TextView
            android:id="@+id/textView"
            app:layout_columnWeight="2"
            app:layout_columnSpan="2"
            android:layout_height="109dp"
            app:layout_column="0" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_row="4"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="283dp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            app:layout_column="2"
            app:layout_row="6"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="341dp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            app:layout_column="1"
            app:layout_row="6"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="341dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="186dp"
            android:layout_height="48dp"
            android:text="@string/del"
            app:layout_column="1"
            app:layout_row="1"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="158dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumar"
            app:layout_column="1"
            app:layout_row="10"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="283dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            app:layout_column="0"
            app:layout_row="3"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar"
            app:layout_column="1"
            app:layout_row="8"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restar"
            app:layout_column="0"
            app:layout_row="10"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="341dp" />

        <Button
            android:id="@+id/button18"
            android:layout_width="187dp"
            android:layout_height="48dp"
            android:text="@string/_0"
            app:layout_column="0"
            app:layout_row="7"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="399dp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/igual"
            app:layout_column="0"
            app:layout_row="8"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="399dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            app:layout_column="2"
            app:layout_row="3"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            app:layout_column="0"
            app:layout_row="6"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="341dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            app:layout_column="0"
            app:layout_row="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="158dp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coma"
            app:layout_column="0"
            app:layout_row="10"
            tools:layout_editor_absoluteX="216dp"
            tools:layout_editor_absoluteY="399dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            app:layout_column="2"
            app:layout_row="4"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="283dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            app:layout_column="1"
            app:layout_row="3"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dividir"
            app:layout_column="2"
            app:layout_row="1"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="158dp" />

        <Switch
            android:id="@+id/sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modo Oscuro"
            app:layout_column="0"
            app:layout_row="13"
            tools:layout_editor_absoluteX="272dp"
            tools:layout_editor_absoluteY="514dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            app:layout_column="1"
            app:layout_row="4" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>